@startuml

title __GUI's Class Diagram__\n

  namespace jovic.dragan.pj2.gui {
    class jovic.dragan.pj2.gui.MainWindow {
        + MainWindow()
        {static} + main()
    }
  }
  

  namespace jovic.dragan.pj2.gui {
    class jovic.dragan.pj2.gui.components.MapViewer {
        - watcher : PreferenceWatcher<SimulatorPreferences>
        + MapViewer()
        + getPreferences()
        + run()
    }
  }
  

  jovic.dragan.pj2.gui.MainWindow -up-|> javax.swing.JFrame
  jovic.dragan.pj2.gui.MainWindow o-- jovic.dragan.pj2.gui.components.MapViewer : viewer
  jovic.dragan.pj2.gui.components.MapViewer .up.|> java.lang.Runnable
  jovic.dragan.pj2.gui.components.MapViewer -up-|> java.awt.Canvas
  jovic.dragan.pj2.gui.components.MapViewer o-- jovic.dragan.pj2.util.Watcher : mapWatcher
  jovic.dragan.pj2.gui.components.MapViewer o-- jovic.dragan.pj2.preferences.SimulatorPreferences : preferences


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
